feat: added users api to use assigned user in tasks.
